--- a/streamdeck-obstools/streamdeck-obstools.csproj
+++ b/streamdeck-obstools/streamdeck-obstools.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Actions\PreviousSceneAction.cs" />
     <Compile Include="Actions\CPUUsageAction.cs" />
     <Compile Include="Actions\DroppedFramesAction.cs" />
+    <Compile Include="InstantReplayWatcher.cs" />
     <Compile Include="OBSManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,6 +82,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="ServerManager.cs" />
+    <Compile Include="Wrappers\GlobalSettings.cs" />
     <Compile Include="Wrappers\SceneChangedEventArgs.cs" />
     <Compile Include="Wrappers\ServerInfo.cs" />
     <Compile Include="Wrappers\ServerInfoEventArgs.cs" />
@@ -143,10 +145,16 @@
     <Content Include="PropertyInspector\DroppedFrames.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="PropertyInspector\InstantReplay.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="PropertyInspector\InstantReplay.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="PropertyInspector\OBSTools.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="PropertyInspector\PluginActionPI.js">
+    <Content Include="PropertyInspector\OBSTools.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="PropertyInspector\rcheck.svg">
