--- a/streamdeck-obstools/OBSTools.csproj
+++ b/streamdeck-obstools/OBSTools.csproj
@@ -78,8 +78,8 @@
     <Reference Include="streamdeck-client-csharp, Version=4.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\streamdeck-client-csharp.4.1.1\lib\netstandard2.0\streamdeck-client-csharp.dll</HintPath>
     </Reference>
-    <Reference Include="StreamDeckTools, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\StreamDeck-Tools.2.5.0\lib\net472\StreamDeckTools.dll</HintPath>
+    <Reference Include="StreamDeckTools, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\DotNet\StreamDeck\packages\StreamDeck-Tools.2.6.0\lib\net472\StreamDeckTools.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -214,6 +214,7 @@
     <Compile Include="Twitch\TwitchToken.cs" />
     <Compile Include="Twitch\TwitchTokenEventArgs.cs" />
     <Compile Include="Twitch\TwitchTokenManager.cs" />
+    <Compile Include="Twitch\ClipDetails.cs" />
     <Compile Include="Twitch\TwitchUserDetails.cs" />
     <Compile Include="Wrappers\GlobalSettings.cs" />
     <Compile Include="Wrappers\SceneChangedEventArgs.cs" />
