--- a/streamdeck-obstools/manifest.json
+++ b/streamdeck-obstools/manifest.json
@@ -171,7 +171,16 @@
         {
           "Image": "Images/pluginAction",
           "TitleAlignment": "middle",
-          "FontSize": "10"
+          "FontSize": "10",
+          "Name": "Standard"
+        },
+        {
+          "Image": "Images/pluginAction",
+          "Name": "Force to Studio"
+        },
+        {
+          "Image": "Images/pluginAction",
+          "Name": "Force to Live"
         }
       ],
       "SupportedInMultiActions": true,
@@ -230,7 +239,7 @@
   "Name": "OBS Tools",
   "Icon": "Images/pluginIcon",
   "URL": "https://BarRaider.com/",
-  "Version": "1.6",
+  "Version": "1.6.1",
   "CodePath": "com.barraider.obstools",
   "Category": "OBS [BarRaider]",
   "CategoryIcon": "Images/categoryIcon",
