--- a/streamdeck-obstools/packages.config
+++ b/streamdeck-obstools/packages.config
@@ -1,46 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.7.82" targetFramework="net472" />
-  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net472" />
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="NLog" version="4.6.8" targetFramework="net472" />
-  <package id="Serilog" version="2.8.0" targetFramework="net472" />
+  <package id="NLog" version="4.7.2" targetFramework="net472" />
+  <package id="Serilog" version="2.9.0" targetFramework="net472" />
   <package id="Serilog.Extensions.Logging" version="3.0.1" targetFramework="net472" />
-  <package id="streamdeck-client-csharp" version="4.1.1" targetFramework="net472" />
-  <package id="StreamDeck-Tools" version="2.7.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net472" />
+  <package id="streamdeck-client-csharp" version="4.2.0" targetFramework="net472" />
+  <package id="StreamDeck-Tools" version="2.9.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core" version="3.0.2" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core.Enums" version="3.0.2" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core.Interfaces" version="3.0.2" targetFramework="net472" />
-  <package id="TwitchLib.Api.Core.Models" version="3.0.2" targetFramework="net472" />
-  <package id="TwitchLib.Api.Helix" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.Helix.Models" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.V5" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Api.V5.Models" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Client" version="3.0.4" targetFramework="net472" />
-  <package id="TwitchLib.Client.Enums" version="1.1.0" targetFramework="net472" />
-  <package id="TwitchLib.Client.Models" version="1.1.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Enums" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Interfaces" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Models" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix.Models" version="3.1.3" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5.Models" version="3.1.2" targetFramework="net472" />
+  <package id="TwitchLib.Client" version="3.1.5" targetFramework="net472" />
+  <package id="TwitchLib.Client.Enums" version="3.1.4" targetFramework="net472" />
+  <package id="TwitchLib.Client.Models" version="3.1.5" targetFramework="net472" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net472" />
-  <package id="TwitchLib.PubSub" version="3.0.3" targetFramework="net472" />
+  <package id="TwitchLib.PubSub" version="3.1.4" targetFramework="net472" />
 </packages>
