--- a/streamdeck-obstools/packages.config
+++ b/streamdeck-obstools/packages.config
@@ -9,11 +9,12 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.5" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.5" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="3.1.5" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.5" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.5" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="NLog" version="4.7.2" targetFramework="net472" />
+  <package id="NLog" version="4.7.4" targetFramework="net472" />
+  <package id="obs-websocket-dotnet" version="4.8.0" targetFramework="net472" />
   <package id="Serilog" version="2.9.0" targetFramework="net472" />
   <package id="Serilog.Extensions.Logging" version="3.0.1" targetFramework="net472" />
   <package id="streamdeck-client-csharp" version="4.2.0" targetFramework="net472" />
@@ -45,4 +46,5 @@
   <package id="TwitchLib.Client.Models" version="3.1.5" targetFramework="net472" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net472" />
   <package id="TwitchLib.PubSub" version="3.1.4" targetFramework="net472" />
+  <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net472" />
 </packages>
